--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "'art vandelay'"
+       "'Art Vandelay'"
       ]
      },
      "execution_count": 1,
@@ -95,7 +95,7 @@
     }
    ],
    "source": [
-    "\"Art andelay\" # \"ART VANDELAY\""
+    "\"Art Vandelay\" # \"ART VANDELAY\""
    ]
   },
   {
